# sample-html-generator

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sample_grid/cli/: main.py
sample_grid/core/: grid.py  model.py  scan.py
sample_grid/core/parse/: base.py  filename.py  sidecar.py  subfolder.py  template.py
sample_grid/drift/: __init__.py  analyze.py  collect.py  metric.py  report.py
sample_grid/live/: __init__.py  diff.py  watcher.py
sample_grid/render/: renderer.py  resolver.py
sample_grid/render/client/: fonts.css  grid.css  grid.js
sample_grid/render/templates/: drift.html.j2  grid.html.j2
sample_grid/util/: paths.py
tests/: conftest.py  test_cli.py  test_freeze.py  test_grid.py  test_live_diff.py  test_live_watcher.py  test_parse.py  test_render.py
